# deno

./: Cargo.toml
cli/: Cargo.toml  build.rs
cli/dts/: lib.wps.ns.d.ts
core/: extensions.rs
ext/io/: lib.rs
extensions/wps/: 01_wps.js  Cargo.toml  lib.deno_wps.d.ts  lib.rs
libs/config/workspace/: discovery.rs
runtime/: Cargo.toml  build.rs  web_worker.rs  worker.rs
runtime/js/: 30_wps.js  90_deno_ns.js  99_main.js
runtime/ops/: mod.rs  wps.rs
wps/: Cargo.toml
wps/cli/: README.md  template.ts  utils.ts  wps.ts
wps/docs/: README.md
wps/src/: lib.rs
wps/tests/: hello.js
